# ERPLibre

./: .erplibre-version  .gitignore  .gitmodules  .prettierignore  .python-version  .travis.yml  CHANGELOG.base.md  CHANGELOG.fr.md  CHANGELOG.md  CLAUDE.md  HOWTO.md  MIGRATION.md  Makefile  PRODUCTION.md  README.base.md  README.fr.md  README.md  TODO.base.md  TODO.fr.md  TODO.md  coverage_run.sh  default.dev.xml  default.xml  docker-compose-dev.yml  docker-compose.yml  env_var.sh  ignore_requirements.txt  install.sh  install_addon.sh  odoo_bin.sh  package-lock.json  package.json  poetry.toml  pyproject.toml  readme.md  reinstall_addon.sh  requirements.txt  run.md  run.sh  source_repo_addons.csv  (+3 more)
.github/: FUNDING.yml  dependabot.yml
conf/: git_manifest.csv  git_manifest_mobile.csv  git_manifest_odoo.csv  image_db_create.txt  list_cg_migrator_test.txt  list_cg_template_test.txt  list_cg_test.txt  make.code_generator.Makefile  make.database.Makefile  make.docker.Makefile  make.documentation.Makefile  make.image_db.Makefile  make.installation.Makefile  make.installation.poetry.Makefile  make.robotlibre.Makefile  make.streamdeck.Makefile  make.test.Makefile  make.todo.Makefile  module_list_image_db_odoo.json  module_list_image_erplibre_base.txt  pycharm_default_configuration.csv  pycharm_exclude_folder.txt  python-erplibre-venv  supported_version_erplibre.json  template_claude_commands_commit.md  template_claude_commands_todo_add_command.md
doc/: AGENT.INFO.base.md  AGENT.INFO.fr.md  AGENT.INFO.md  CERTIFICAT_SUR_MOBILES.md  CODE_GENERATOR.base.md  CODE_GENERATOR.fr.md  CODE_GENERATOR.md  CONTRIBUTION.base.md  CONTRIBUTION.fr.md  CONTRIBUTION.md  CYBERSÉCURITÉ_ET_LOYAUTÉ.md  DEVELOPMENT.base.md  DEVELOPMENT.fr.md  DEVELOPMENT.md  DISCOVER.base.md  DISCOVER.fr.md  DISCOVER.md  FAQ.base.md  FAQ.fr.md  FAQ.md  GIT_REPO.base.md  GIT_REPO.fr.md  GIT_REPO.md  HOWTO.base.md  HOWTO.fr.md  HOWTO.md  MIGRATION.base.md  MIGRATION.fr.md  MIGRATION.md  MOBILE_DEVOCE_MANAGEMENT.md  POETRY.base.md  POETRY.fr.md  POETRY.md  PRODUCTION.base.md  PRODUCTION.fr.md  PRODUCTION.md  QUESTIONNAIRE_CYBERMATURITÉ.md  RELEASE.base.md  RELEASE.fr.md  RELEASE.md  (+13 more)
docker/: Dockerfile  Dockerfile.ERPLibre.base  Dockerfile.base  Dockerfile.dev  Dockerfile.main  Dockerfile.prod.pkg  Dockerfile.prod.src  README.base.md  README.fr.md  README.md  docker-compose.yml  docker-compose_odoo_12.0.yml  docker-compose_odoo_14.0.yml  docker-compose_odoo_16.0.yml  docker-compose_odoo_18.0.yml  docker-compose_odoo_18.0_selenium.yml  entrypoint.sh  odoo.conf  repo_manifest_gen_org_prefix_path.py  wait-for-psql.py
manifest/: default.dev.odoo12.0.xml  default.dev.odoo13.0.xml  default.dev.odoo14.0.xml  default.dev.odoo15.0.xml  default.dev.odoo16.0.xml  default.dev.odoo17.0.xml  default.dev.odoo18.0.xml  default.dev.xml  default.experimental.xml  default.staged.xml  default.xml  git_manifest_erplibre_extra.xml  git_manifest_erplibre_odoo.xml  git_manifest_erplibre_odoo_dev.xml  git_manifest_mobile_home.xml  git_manifest_odoo12.0.xml  git_manifest_odoo12.0_dev.xml  git_manifest_odoo13.0.xml  git_manifest_odoo13.0_dev.xml  git_manifest_odoo14.0.xml  git_manifest_odoo14.0_dev.xml  git_manifest_odoo15.0.xml  git_manifest_odoo15.0_dev.xml  git_manifest_odoo16.0.xml  git_manifest_odoo16.0_dev.xml  git_manifest_odoo17.0.xml  git_manifest_odoo17.0_dev.xml  git_manifest_odoo18.0.xml  git_manifest_odoo18.0_dev.xml  odoo14.dev.xml  origin_git_manifest_odoo18.0.xml
mobile/: compile_and_run.sh  install_and_run.sh  install_mobile_dev.sh  run_tests.sh
private/: .gitignore  TODO.md
pyinfra/: README.base.md  README.fr.md  README.md  deploy.py  inventory.py
requirement/: erplibre_require-ments-poetry.txt  erplibre_require-ments.txt  ignore_requirements.odoo12.0_python3.7.17.txt  ignore_requirements.odoo13.0_python3.7.17.txt  ignore_requirements.odoo14.0_python3.8.10.txt  ignore_requirements.odoo14.0_python3.8.20.txt  ignore_requirements.odoo15.0_python3.8.20.txt  ignore_requirements.odoo18.0_python3.12.10.txt  ignore_requirements.python3.8.10_odoo14.0.txt  ignore_requirements.txt  pyproject.odoo12.0_python3.7.16.toml  pyproject.odoo12.0_python3.7.17.toml  pyproject.odoo13.0_python3.7.17.toml  pyproject.odoo14.0_python3.8.10.toml  pyproject.odoo14.0_python3.8.20.toml  pyproject.odoo15.0_python3.8.20.toml  pyproject.odoo16.0_python3.10.14.toml  pyproject.odoo16.0_python3.10.18.toml  pyproject.odoo17.0_python3.10.18.toml  pyproject.odoo18.0_python3.12.10.toml  pyproject.python3.10.14_odoo16.0.toml  pyproject.python3.7.16_odoo12.0.toml  pyproject.python3.8.10_odoo14.0.toml  requirements.odoo12.0_python3.7.16.txt  requirements.odoo12.0_python3.7.17.txt  requirements.odoo13.0_python3.7.17.txt  requirements.odoo14.0_python3.8.20.txt  requirements.odoo15.0_python3.8.20.txt  requirements.odoo16.0_python3.10.14.txt  requirements.odoo16.0_python3.10.18.txt  requirements.odoo17.0_python3.10.18.txt  requirements.odoo18.0_python3.12.10.txt  requirements.python3.10.14_odoo16.0.txt  requirements.python3.7.16_odoo12.0.txt  requirements.python3.8.10_odoo14.0.txt
script/: __init__.py  addons_repo_origin.py  build_docker.sh  clean_repo_manifest.sh  clean_system_for_install.sh  db_restore.py  delete_production.sh  docker_build.sh  docker_update_version.py  fork_project.py  fork_project_ERPLibre.py  generate_config.sh  git_change_remote.py  git_change_remote_https_to_git.py  git_diff_repo_manifest.py  git_merge_repo_manifest.py  git_repo_manifest.py  git_repo_update_group.py  git_show_code_diff_repo_manifest.py  git_tool.py  git_update_repo.py  install_OSX_dependancy.sh  install_OSX_dependency.sh  install_daemon.sh  install_daemon_local.sh  install_debian_10_prod_docker.sh  install_debian_dependancy.sh  install_debian_dependency.sh  install_dev.sh  install_dev_extra_ubuntu.sh  install_locally.sh  install_locally_dev.sh  install_locally_prod.sh  install_production.sh  install_production_nginx.sh  install_raspian_dependency.sh  lib_asyncio.py  list_repo_diff.py  make.sh  odoo_install_OSX_dependancy.sh  (+22 more)
test/: test_check_addons_exist.py  test_config_file.py  (+14 more)
(+453 files in other folders)
