[build-system]
requires = [ "poetry>=1.1.14",]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
py_version = 37

[tool.black]
line-length = 79
target-version = [ "py37",]

[tool.poetry]
name = "ERPLibre"
version = "1.4.0"
description = "Easy way to configure Odoo community"
license = "AGPL-3.0-or-later"
authors = [ "Mathieu Benoit <mathben@technolibre.ca>",]

[tool.poetry.dependencies]
python = "^3.7.16"
agithub = "^2.2.2"
aioshutil = "<1.2"
altair = "^4.2.0"
argcomplete = "^2.0.0"
asterisk = "^0.0.8"
astor = "^0.8.1"
babel = "2.9.1"
beautifulsoup4 = "^4.11.1"
bokeh = "1.1.0"
boto3 = ">=1.20.41"
cachetools = ">=2.0.1"
cerberus = "^1.3.4"
chardet = "5.0.0"
click = "^8.1.3"
cloudflare = "^2.11.1"
code-writer = "^1.1.1"
colorama = "^0.4.6"
configparser = "5.0.2"
coverage = "^7.0.1"
cryptography = "36.0.1"
css-html-prettify = "^2.5.5"
cython = "^0.29.32"
ddt = "1.2.0"
decorator = "4.0.10"
docutils = ">=0.14,<1.0"
ebaysdk = "2.1.5"
email-validator = "^1.3.0"
emoji = "^2.2.0"
escpos = "^1.9"
extract-msg = "<0.30"
factur-x = "^2.3"
feedparser = "6.0.10"
flake8 = "<6.0.0"
formio-data = "^0.4.7"
freezegun = "0.3.11"
geojson = "^2.5.0"
gevent = "1.5.0"
gitpython = "3.1.29"
giturlparse = "^0.10.0"
greenlet = "0.4.14"
html2text = "2016.9.19"
invoice2data = "0.3.5"
iscompatible = "^0.1.1"
isort = "^5.11.4"
jinja2 = "2.11.3"
jira = "2.0.0"
jose = "^1.0.0"
js2py = "^0.74"
keystoneauth1 = "3.14.0"
lasso = "^0.0.5"
libsass = "0.12.3"
lxml = "4.9.1"
mako = "1.2.2"
markupsafe = "0.23"
mock = "2.0.0"
mpld3 = "^0.5.9"
mysqlclient = "2.1.1"
num2words = "0.5.6"
numpy = "1.21.1"
oauthlib = "2.1.0"
oca-decorators = "^0.0.1"
ofxparse = "0.16"
openpyxl = "^3.0.10"
openupgradelib = "^3.4.0"
orjson = "3.6.0"
ovh = "^1.0.0"
paho-mqtt = "^1.6.1"
pandas = "1.3.5"
paramiko = "^2.12.0"
passlib = "1.6.5"
pdf2image = "^1.16.2"
pdfminer = "^20191125"
pexpect = "^4.8.0"
phonenumbers = "^8.13.3"
pillow = "9.3.0"
plotly = "4.1.0"
premailer = "^3.10.0"
psutil = "5.9.0"
psycopg2 = "2.9.5"
py-asterisk = "^0.5.18"
py3o-formats = "^0.3"
py3o-template = "^0.10.0"
pycountry = "^22.3.5"
pycrypto = "2.6.1"
pydot = "1.2.3"
pygments = ">=2.6.1,<2.7.0"
pygments-csv-lexer = ">=0.1,<1.0"
pygount = "<1.2.0"
pyjsparser = "^2.7.1"
pyjwt = "2.5.0"
pyldap = "2.4.28"
pymssql = "^2.2.7"
pymysql = "^1.0.2"
pyotp = "^2.8.0"
pyparsing = "2.1.10"
pypdf2 = "1.27.8"
pyproj = "3.2.1"
pysass = ">=0.1.0,<0.2.0"
pyserial = "3.1.1"
pysftp = "^0.2.9"
python-chess = "<0.24"
python-dateutil = "2.7.3"
python-git = "^2018.2.1"
python-jose = "^3.3.0"
python-json-logger = "0.1.5"
python-keystoneclient = "3.22.0"
python-ldap = "^3.4.3"
python-slugify = ">=3.0.2"
python-stdnum = "^1.18"
python-swiftclient = "3.9.0"
python-u2flib-server = "^5.0.1"
pytz = ">=2022.7"
pyusb = "1.0.0"
pyyaml = "6.0"
pyzbar = "^0.1.9"
qrcode = "5.3"
raven = "^6.10.0"
redis = "3.5.3"
reportlab = "3.6.5"
requests = "2.28.1"
requests-mock = "^1.10.0"
requests-oauthlib = "1.1.0"
requests-toolbelt = "0.9.1"
responses = "^0.22.0"
retrying = "^1.3.4"
serial = "^0.0.97"
setuptools = "65.5.1"
shapely = "^2.0.0"
simplejson = "3.16.0"
slugify = "^0.0.1"
soappy = "^0.12.22"
sphinx = ">=3.0,<4.0"
sphinx-intl = "^2.0.1"
sphinx-rtd-theme = "^1.1.1"
sqlalchemy = "^1.4.45"
sqlparse = "^0.4.3"
statsd = "3.2.1"
toml = "^0.10.2"
tornado = "6.1"
twython = "^3.9.1"
unidecode = "1.0.22"
unidiff = "^0.7.4"
urllib3 = ">=1.26.13"
vcrpy = ">=2.1.1"
vcrpy-unittest = "^0.1.7"
vobject = "0.9.3"
voicent-python = "^1.0"
webcolors = "^1.12"
websocket-client = "^1.4.2"
wechatpy = "^1.8.18"
werkzeug = "0.11.15"
wget = "^3.2"
wheel = "^0.38.4"
win-unicode-console = "^0.5"
xlrd = "1.0.0"
xlsxwriter = "0.9.3"
xlwt = "1.3"
xmlformatter = "^0.2.4"
xmltodict = "^0.13.0"
zeep = "^4.2.1"
zipp = ">=3.6.0"
zxcvbn = "^4.4.28"

[tool.poetry.dev-dependencies]
websocket_client = "^1.1.0"

[tool.poetry.dependencies.black]
git = "https://github.com/psf/black.git"
rev = "22.3.0"

[tool.poetry.dependencies.pylint-odoo]
git = "https://github.com/oca/pylint-odoo.git"
