[build-system]
requires = [ "poetry>=1.1.14",]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
py_version = 37

[tool.black]
line-length = 79
target-version = [ "py37",]

[tool.poetry]
name = "ERPLibre"
version = "1.5.0"
description = "Easy way to configure Odoo community"
license = "AGPL-3.0-or-later"
authors = [ "Mathieu Benoit <mathben@technolibre.ca>",]

[tool.poetry.dependencies]
python = "^3.8.10"
acme = "^2.6.0"
agithub = "^2.2.2"
aiohttp = "^3.8.4"
aioshutil = "<1.2"
argcomplete = "^3.1.1"
astor = "0.8.1"
avalara = "^23.6.1"
azure-identity = "1.13.0"
azure-storage-blob = "12.16.0"
babel = "2.9.1"
beautifulsoup4 = "^4.12.2"
bokeh = "2.3.1"
boto3 = ">=1.20.41"
cachetools = "^5.3.1"
chardet = "5.0.0"
chromedriver-binary = "^114.0.5735.90.0"
click = "^8.1.4"
cloudflare = "^2.11.6"
colorama = "^0.4.6"
contextvars = "^2.4"
coverage = "^7.2.7"
cryptography = "39.0.1"
css-html-prettify = "^2.5.5"
cython = "^0.29.36"
dateparser = "1.1.1"
ddt = "1.2.1"
decorator = "4.3.0"
dicttoxml = "^1.7.16"
dnspython = "^2.3.0"
docutils = "0.16.0"
ebaysdk = "2.1.5"
email-validator = "^2.0.0.post2"
emoji = "^2.6.0"
endesive = "^2.0.16"
extract-msg = "0.36.1"
factur-x = "^2.5"
feedparser = "6.0.10"
flake8 = "<6.0.0"
formio-data = "^0.5.1"
freezegun = "0.3.15"
future = "0.18.3"
geojson = "<3.0.0"
gevent = "1.5.0"
gitpython = "3.1.30"
giturlparse = "^0.10.0"
greenlet = "1.1.2"
html2text = "^2020.1.16"
idna = "2.6"
invoice2data = "^0.4.4"
iscompatible = "^0.1.1"
isort = "<5.12.0"
jinja2 = "2.11.3"
josepy = "^1.13.0"
keystoneauth1 = "3.14.0"
libsass = "0.17.0"
lxml = "4.9.1"
mako = "1.2.2"
markupsafe = "1.1.0"
mmg = "^1.0.3"
mock = "5.0.1"
mpld3 = "^0.5.9"
mysqlclient = "2.1.1"
num2words = "0.5.6"
numpy = "1.21.1"
numpy-financial = "<=1.0.0"
odoo-test-helper = "^2.1.0"
odoorpc = "^0.9.0"
ofxparse = "0.21"
openpyxl = "^3.1.2"
openupgradelib = "^3.4.1"
ovh = "^1.1.0"
pandas = "1.3.5"
paramiko = "^3.2.0"
passlib = "1.7.1"
pathspec = "^0.11.1"
pdf2image = "^1.16.3"
pdfplumber = "^0.9.0"
phonenumbers = "^8.13.16"
pillow = "9.3.0"
plotly = "5.4.0"
polib = "1.1.0"
premailer = "^3.10.0"
prometheus-client = "0.11.0"
psutil = "5.9.0"
psycopg2 = "2.9.5"
py-asterisk = "^0.5.18"
py3o-formats = "^0.3"
py3o-template = "^0.10.0"
pycountry = "^22.3.5"
pydot = "1.4.1"
pyftpdlib = "^1.5.7"
pygithub = "^1.59.0"
pygments = "2.7.4"
pygments-csv-lexer = ">=0.1,<1.0"
pygount = "1.5.1"
pyjwt = "2.5.0"
pyopenssl = "^23.2.0"
pypdf2 = "1.27.9"
pyproj = "3.2.1"
pysaml2 = "7.2.1"
pysass = ">=0.1.0,<0.2.0"
pyserial = "3.4"
pysftp = "^0.2.9"
python-chess = "^1.999"
python-dateutil = "2.7.3"
python-git = "^2018.2.1"
python-jose = "^3.3.0"
python-json-logger = "0.1.5"
python-keystoneclient = "3.22.0"
python-ldap = "3.1.0"
python-magic = "^0.4.27"
python-slugify = "^8.0.1"
python-stdnum = "1.8"
python-swiftclient = "3.9.0"
python-u2flib-server = "^5.0.1"
pytz = ">=2022.7"
pyusb = "1.0.2"
pyyaml = "6.0"
pyzbar = "^0.1.9"
qrcode = "6.1"
redis = "3.2.1"
regex = "2022.3.2"
reportlab = "3.6.5"
requests = "2.28.1"
retrying = "^1.3.4"
roulier = "^1.1.0"
selenium = "^4.10.0"
sentry-sdk = "<=1.9.0"
setuptools = "65.5.1"
shapely = "1.8.5"
simplejson = "3.16.0"
sphinx = "4.3.2"
sphinx-intl = "^2.1.0"
sphinx-lint = "0.6.7"
sphinx-rtd-theme = "^1.2.2"
sphinx-tabs = "3.2.0"
statsd = "3.2.1"
toml = "^0.10.2"
tqdm = "^4.65.0"
unicodecsv = "^0.14.1"
unidecode = "1.0.23"
unidiff = "^0.7.5"
urllib3 = ">=1.26.13"
uvloop = "^0.17.0"
validators = "^0.20.0"
vobject = "0.9.6.1"
voicent-python = "^1.0"
webcolors = "^1.13"
websocket-client = "^1.6.1"
werkzeug = "0.16.1"
wheel = "^0.40.0"
win-unicode-console = "^0.5"
xlrd = "1.2.0"
xlsxwriter = "1.1.2"
xlwt = "1.3"
xmlformatter = "^0.2.4"
xmlrunner = "^1.7.7"
xmlschema = "^2.3.1"
xmltodict = "^0.13.0"
zeep = "3.2.0"
zipp = ">=3.6.0"
zxcvbn = "^4.4.28"

[tool.poetry.dev-dependencies]
websocket_client = "^1.1.0"

[tool.poetry.dependencies.black]
git = "https://github.com/psf/black.git"
rev = "22.3.0"

[tool.poetry.dependencies.pylint-odoo]
git = "https://github.com/oca/pylint-odoo.git"
