[build-system]
requires = [ "poetry>=1.8.3",]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
py_version = 37

[tool.black]
line-length = 79
target-version = [ "py37",]

[tool.poetry]
name = "ERPLibre"
version = "1.5.0"
description = "Easy way to configure Odoo community"
license = "AGPL-3.0-or-later"
authors = [ "Mathieu Benoit <mathben@technolibre.ca>",]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10.14"
agithub = "^2.2.2"
argcomplete = "^3.5.0"
asana = "^5.0.8"
asn1crypto = "^1.5.1"
astor = "^0.8.1"
avalara = "^24.6.3"
azure-identity = "1.13.0"
azure-storage-blob = "12.16.0"
babel = "2.9.1"
beautifulsoup4 = "^4.12.3"
bokeh = "3.1.1"
boto3 = "1.26.7"
bs4 = "^0.0.2"
cachetools = "^5.4.0"
cairosvg = "^2.7.1"
chardet = "4.0.0"
clicksend-client = "^5.0.78"
cloudflare = "^3.1.0"
cmake = "^3.30.2"
colorama = "^0.4.6"
countryinfo = "^0.1.2"
cryptography = "3.4.8"
cybersource-rest-client-python = "0.0.56"
cython = "^3.0.11"
decorator = "4.4.2"
dlib = "^19.24.6"
docutils = "0.16"
dotty-dict = "^1.3.1"
dropbox = "^12.0.2"
ebaysdk = "2.1.5"
email-validator = "^2.2.0"
endesive = "^2.17.2"
extract-msg = "^0.48.7"
ezdxf = "^1.3.3"
face-recognition = "^1.3.0"
factur-x = "^3.1"
filetype = "^1.2.0"
formio-data = "^2.0.3"
freezegun = "0.3.15"
fsspec = ">=2024.5.0"
gdown = "^5.2.0"
geocoder = "^1.38.1"
geojson = "^3.1.0"
geopy = "^2.4.1"
gevent = "21.8.0"
gitpython = "3.1.30"
giturlparse = "^0.12.0"
googletrans-py = "4.0.0"
greenlet = "1.1.2"
httpagentparser = "1.8.1"
hubspot-api-client = "^9.0.0"
idna = "2.10"
iscompatible = "^0.1.1"
jinja2 = "2.11.3"
keystoneauth1 = "5.0.0"
libsass = "0.20.1"
linkedin = "^0.1.5"
lottie = "^0.7.0"
lxml = "4.6.5"
lxml-html-clean = "^0.2.0"
mako = "^1.3.5"
markupsafe = "1.1.1"
matplotlib = "^3.9.2"
mechanize = "^0.4.10"
messagebird = "^2.2.0"
mock = "^5.1.0"
mpld3 = "0.5.9"
mysqlclient = "^2.2.4"
nextcloud-api-wrapper = "^0.2.3"
num2words = "0.5.13"
numpy = ">=1.15"
numpy-financial = "<=1.0.0"
numpy-stl = "^3.1.2"
odoo-test-helper = "^2.1.1"
odoorpc = "^0.10.1"
ofxparse = "0.21"
ofxtools = "^0.9.5"
openai = "^1.41.0"
opencv-python = "^4.10.0.84"
openpyxl = "^3.1.5"
pandas = ">=0.25.3"
paramiko = "^3.4.1"
passlib = "1.7.4"
pathspec = "^0.12.1"
pay-ccavenue = "^0.1.6"
pdf2image = "^1.17.0"
phonenumbers = "^8.13.43"
pillow = "9.0.1"
plotly = "5.13.1"
polib = "1.1.0"
premailer = "^3.10.0"
printnodeapi = "^0.2.0"
prometheus-client = "0.15.0"
psutil = "5.8.0"
psycopg2 = "2.9.2"
py-asterisk = "^0.5.18"
py3dns = "^4.0.2"
py3o-formats = "^0.3"
py3o-template = "^0.10.0"
pycountry = "^24.6.1"
pydifact = "^0.1.7"
pydot = "1.4.2"
pyfcm = "^2.0.6"
pygithub = "^2.3.0"
pyjwt = "^2.9.0"
pymssql = "<=2.2.5"
pyncclient = "^0.7"
pyopenssl = "20.0.1"
pypdf2 = "1.26.0"
pyrfc6266 = "^1.0.2"
pysaml2 = "^7.5.0"
pyserial = "3.5"
pysftp = "^0.2.9"
pytesseract = "^0.3.13"
python-barcode = "^0.15.1"
python-dateutil = "2.8.1"
python-jose = "^3.3.0"
python-json-logger = "2.0.4"
python-keystoneclient = "5.0.0"
python-ldap = "3.4.0"
python-resize-image = "^1.1.20"
python-slugify = "^8.0.4"
python-stdnum = "1.16"
python-swiftclient = "4.1.0"
python-telegram-bot = "^21.4"
pytz = "^2024.1"
pyusb = "1.0.2"
pyyaml = "6.0"
pyzbar = "^0.1.9"
qrcode = "6.1"
redis = "4.3.4"
reportlab = "3.5.59"
requests = "2.30.0"
requests-toolbelt = "^1.0.0"
responses = "^0.25.3"
retrying = "^1.3.4"
rl-renderpm = "4.0.3"
roulier = "^1.1.1"
schwifty = "2024.4.0"
sentry-sdk = "<=1.9.0"
shapely = "^2.0.5"
simplejson = "^3.19.3"
spacy = "^3.7.5"
speechrecognition = "3.10.0"
sqlalchemy = "^2.0.32"
statsd = "4.0.1"
telesign = "^2.2.2"
telnyx = "^2.1.3"
todoist-python = "^8.1.4"
toml = "^0.10.2"
tweepy = "^4.14.0"
twilio = "^9.2.3"
unidecode = "^1.3.8"
unidiff = "^0.7.5"
urllib3 = "1.26.5"
validate-email = "^1.3"
vobject = "0.9.6.1"
vonage = "^3.16.1"
werkzeug = "2.0.2"
wheel = "^0.44.0"
xlrd = "1.2.0"
xlsxwriter = "1.4.5"
xlwt = "1.3.0"
xmltodict = "0.13.0"
zeep = "4.0.0"

[tool.poetry.dev-dependencies]
websocket_client = "^1.1.0"

[tool.poetry.dependencies.openupgradelib]
git = "https://github.com/OCA/openupgradelib"
rev = "master"
